For_Sir_From_US

--- a/batch1.html
+++ b/batch1.html
@@ -136,7 +136,7 @@
         </div>
         <div class="info">
           <span>Oakar Phyo</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="Sir.html">Click</a>
       </div>
@@ -146,7 +146,7 @@
         </div>
         <div class="info">
           <span>Thet Wai Phyoe</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="twplight.html">Click</a>
       </div>
@@ -156,7 +156,7 @@
         </div>
         <div class="info">
           <span>Min Thiha Tun</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="min.html">Click</a>
       </div>
@@ -166,7 +166,7 @@
         </div>
         <div class="info">
           <span>Khant Kyaw Zay</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="kkzay.html">Click</a>
       </div>
@@ -176,7 +176,7 @@
         </div>
         <div class="info">
           <span>San Mg</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="remember.html">Click</a>
       </div>
@@ -186,7 +186,7 @@
         </div>
         <div class="info">
           <span>Aung Khant Kyaw</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="akklight.html">Click</a>
       </div>
@@ -196,7 +196,7 @@
         </div>
         <div class="info">
           <span>Htin Paw Aye</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="hpaLight.html">Click</a>
       </div>
@@ -206,7 +206,7 @@
         </div>
         <div class="info">
           <span>Nann Oo Hlaing</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="nann.html">Click</a>
       </div>
@@ -216,7 +216,7 @@
         </div>
         <div class="info">
           <span>🦋 Giselle 🦋</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="giselle.html">Click</a>
       </div>
