--- a/darkB1.html
+++ b/darkB1.html
@@ -123,7 +123,7 @@
         </div>
         <div class="info">
           <span>Oakar Phyo</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="Sir.html">Click</a>
       </div>
@@ -133,7 +133,7 @@
         </div>
         <div class="info">
           <span>Thet Wai Phyoe</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="twpdark.html">Click</a>
       </div>
@@ -143,7 +143,7 @@
         </div>
         <div class="info">
           <span>Min Thiha Tun</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="min_dark.html">Click</a>
       </div>
@@ -153,7 +153,7 @@
         </div>
         <div class="info">
           <span>Khant Kyaw Zay</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="kkzayy.html">Click</a>
       </div>
@@ -163,7 +163,7 @@
         </div>
         <div class="info">
           <span>San Mg</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="remember(b).html">Click</a>
       </div>
@@ -173,7 +173,7 @@
         </div>
         <div class="info">
           <span>Aung Khant Kyaw</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="akk.html">Click</a>
       </div>
@@ -183,7 +183,7 @@
         </div>
         <div class="info">
           <span>Htin Paw Aye</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="hpadark.html">Click</a>
       </div>
@@ -193,7 +193,7 @@
         </div>
         <div class="info">
           <span>Nann Oo Hlaing</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="nann.html">Click</a>
       </div>
@@ -203,7 +203,7 @@
         </div>
         <div class="info">
           <span>🦋 Giselle 🦋</span>
-          <p>Feture Developers</p>
+          <p>Future Developers</p>
         </div>
         <a href="giselledark.html">Click</a>
       </div>
