For_Sir-From_Us

--- a/medark.html
+++ b/medark.html
@@ -30,7 +30,7 @@
   <body>
     <div class="box">
       <div class="key">
-        <a href="batch2.html"
+        <a href="darkB2.html"
           ><ion-icon name="arrow-undo-circle-outline" class="back"></ion-icon>
         </a>
       </div>
