--- a/image.html
+++ b/image.html
@@ -7,6 +7,11 @@
     <title>Thank alot Sir</title>
     <link rel="stylesheet" href="css/pot.css" />
     <link href="Img/PHK.jpg" rel="icon" type="image/x-icon" />
+    <style>
+      * {
+        user-select: none;
+      }
+    </style>
   </head>
   <body>
     <!-- <span>Hello sir,I'm pyae hein khant from B2</span>
