From Us For Sir

--- a/Sir2.html
+++ b/Sir2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="Img/OKP.jpg" rel="icon" type="image/x-icon" />
     <title>Sir</title>
     <link rel="stylesheet" type="text/css" href="css/Sir2.css" />
   </head>
