--- a/bubblesdark.html
+++ b/bubblesdark.html
@@ -22,7 +22,7 @@
         justify-content: center;
         align-items: center;
         gap: 1.875rem;
-        background: #353535;
+        background: #412525;
         font-family: "Shantell Sans", cursive;
         text-transform: capitalize;
       }
@@ -30,16 +30,16 @@
       .drop {
         width: 300px;
         height: 300px;
-        box-shadow: inset 20px 20px 20px rgb(45, 45, 45, 0.5),
-          20px 20px 20px #2d2d2d, 15px 15px 20px #3d3d3d90,
-          inset -15px -15px 20px #11111160;
+        box-shadow: inset 20px 20px 20px rgb(55, 31, 31, 0.7),
+          20px 20px 20px #371f1f, 15px 15px 20px #4b2b2b90,
+          inset -15px -15px 20px #532f2f80;
         border-radius: 50%;
         position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
         font-size: 5rem;
-        color: #e0e0e0;
+        color: #edbb91;
       }
 
       .drop:nth-child(1) {
@@ -53,7 +53,7 @@
       .drop::before {
         content: "";
         position: absolute;
-        background: #444;
+        background: #4f2d2d;
         width: 35px;
         height: 35px;
         border-radius: 50%;
@@ -65,7 +65,7 @@
       .drop::after {
         content: "";
         position: absolute;
-        background: #444;
+        background: #4f2d2d;
         width: 20px;
         height: 20px;
         border-radius: 50%;
@@ -76,7 +76,7 @@
 
       span {
         font-size: 5rem;
-        color: #ff7961;
+        color: #c46352;
       }
     </style>
   </head>
