--- a/Sir.html
+++ b/Sir.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="Img/OKP.jpg" rel="icon" type="image/x-icon" />
     <title>Loading</title>
     <style type="text/css">
       * {
