--- a/bubblesdark.html
+++ b/bubblesdark.html
@@ -31,8 +31,8 @@
         width: 300px;
         height: 300px;
         box-shadow: inset 20px 20px 20px rgb(55, 31, 31, 0.7),
-          20px 20px 20px #371f1f, 15px 15px 20px #4b2b2b90,
-          inset -15px -15px 20px #532f2f80;
+          20px 20px 20px #371f1f, 15px 15px 20px #331d1d90,
+          inset -15px -15px 20px #4f2d2d90;
         border-radius: 50%;
         position: relative;
         display: flex;
@@ -53,7 +53,7 @@
       .drop::before {
         content: "";
         position: absolute;
-        background: #4f2d2d;
+        background: #5a3333;
         width: 35px;
         height: 35px;
         border-radius: 50%;
@@ -65,7 +65,7 @@
       .drop::after {
         content: "";
         position: absolute;
-        background: #4f2d2d;
+        background: #5a3333;
         width: 20px;
         height: 20px;
         border-radius: 50%;
