For_Sir_From_Us

--- a/darkB1.html
+++ b/darkB1.html
@@ -195,7 +195,7 @@
           <span>Nann Oo Hlaing</span>
           <p>Future Developers</p>
         </div>
-        <a href="nann.html">Click</a>
+        <a href="nanndark.html">Click</a>
       </div>
       <div class="card">
         <div class="pic">
